<resources>
    <string name="app_name">Albea ANDON</string>
    <string name="login_title">LOGIN ANDON</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_button_label">LOGIN</string>
    <string name="logout_title_label">Logout</string>
    <string name="login_username_error_label">Username is required</string>
    <string name="login_password_error_label">Password is required</string>
    <string name="unauthorized_title">Unauthorized</string>
    <string name="unauthorized_desc">You are not authorized, your token has expired please login again</string>
    <string name="unauthorized_button_label">OK</string>
    <string name="choose_language_label">Language:</string>

    <string name="ticket_empty_state_desc">No Ticket Found, seems all work are done, Good Job</string>
    <string name="ticket_id_label">Ticket No: %1$s</string>
    <string name="ticket_status_label">%1$s</string>
    <string name="ticket_machine_label">Machine No: %1$s</string>
    <string name="ticket_assign_label">Assign To: %1$s</string>
    <string name="ticket_problem_label">Problem: %1$s</string>
    <string name="ticket_date_label">Create Date: %1$s</string>"
    <string name="ticket_machine_loc_label">Machine Loc: %1$s</string>"
    <string name="ticket_action_plan_label">Action Plan: %1$s</string>
    <string name="ticket_escalation_message_label">Escalation Message: %1$s</string>
    <string name="home_title_label">Hi, %1$s</string>
    <string name="assign_title_label">Assign Ticket</string>
    <string name="assign_button_label">Assign Personnel</string>
    <string name="assign_personnel_name_label">Name: %1$s</string>
    <string name="assign_personnel_dept_label">Department: %1$s</string>
    <string name="assign_personnel_ticket_label">Total Ticket: %1$s</string>
    <string name="assign_personnel_available_label">Available Personnel List</string>
    <string name="assign_personnel_not_selected_label">No Personnel Selected</string>
    <string name="assign_personnel_not_selected_desc">Please select personnel to continue</string>
    <string name="assign_personnel_not_selected_button_label">OK</string>
    <string name="nfc_verify_title">NFC Verification</string>
    <string name="nfc_verify_desc">Please tap your phone into NFC Card at Machine location for verify your location and position</string>
    <string name="nfc_verify_button_label">Close</string>
    <string name="nfc_verify_enable_nfc_message">NFC is not enabled on this device. Please enable NFC to continue.</string>
    <string name="nfc_verify_fail_title">Failed to Verify</string>
    <string name="nfc_verify_fail_desc">Failed to verify your location and position because NFC rfid not matched with this ticket</string>
    <string name="nfc_verify_fail_button_label">Close</string>
    <string name="assign_success_title">Success Assign Ticket</string>
    <string name="assign_success_desc">Success assign ticket to %1$s</string>
    <string name="assign_success_button_label">OK</string>
    <string name="problem_title_label">Assigned Ticket</string>
    <string name="problem_group_label">Problem Group</string>
    <string name="problem_group_hint_label">Select Problem Group</string>
    <string name="problem_label">Problem</string>
    <string name="problem_hint_label">Select Problem</string>
    <string name="problem_todo_plan_label">Todo Plan</string>
    <string name="problem_todo_plan_hint_label">Select Todo Plan</string>
    <string name="problem_assign_ticket_date">Assign Date: %1$s</string>
    <string name="problem_action_button_submit_label">Submit</string>
    <string name="problem_action_button_help_label">Help</string>
    <string name="problem_action_button_escalation_label">Escalation</string>
    <string name="problem_action_button_done_label">Done</string>
    <string name="problem_error_no_previous_value">Please Select Previous Value</string>
    <string name="problem_error_no_previous_value_action">Okay Understand</string>
    <string name="problem_error_no_todo_id_selected">Please Select Todo Plan to Continue</string>
    <string name="problem_error_no_todo_id_selected_action">Okay Understand</string>
    <string name="onprogress_success_title">Success Change Ticket Status</string>
    <string name="onprogress_success_button_label">OK</string>
    <string name="escalation_title_label">Escalation</string>
    <string name="escalation_message_hint_label">Escalation Message</string>
    <string name="escalation_button_label">Escalate</string>
    <string name="escalation_error_no_message">Please Enter Escalation Message</string>
    <string name="finalize_notify_done_ticket_success">Success Notify Done Ticket</string>
    <string name="finalize_notify_help_ticket_success">Success Request Help Ticket</string>
    <string name="finalize_close_ticket_success">Success Close Ticket</string>
    <string name="finalize_escalation_ticket_success">Success Escalation Ticket</string>
    <string name="finalize_success_button_label">Okay</string>
    <string name="finalize_title_label">Update Progress Ticket</string>
    <string name="spv_done_todo_select_title">Select Actual Problem Details</string>
    <string name="spv_done_todo_confirmation_title">Confirmation Actual Problem</string>
    <string name="spv_done_todo_confirmation_message">Please confirm actual problem is same with current expected problem?</string>
    <string name="spv_done_negative_button_label">No</string>
    <string name="spv_done_positive_button_label">Yes</string>
    <string name="spv_done_submit_button_label">Submit</string>
    <string name="spv_done_required_message">Please select this field first</string>
    <string name="general_server_error_title">Something Went Wrong</string>
    <string name="general_server_error_desc">Error Code: %1$d \nError Message: %2$s</string>
    <string name="general_server_error_action_button">Okay</string>
</resources>